--- a/Von Koch's conjecture/Von Koch's conjecture.csproj
+++ b/Von Koch's conjecture/Von Koch's conjecture.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RootNamespace>Von_Koch_s_conjecture</RootNamespace>
   </PropertyGroup>
 
 </Project>
